<resources>
    <string name="app_name">horseRacingApp</string>
    <string name="window_text">Press the button below to receive a friendly greeting from Android.</string>
    <string name="button_label">Show Greeting</string>
    <string name="greeting_text">Greetings One and All from Android!</string>
    <string name="button_addRace">Add Race</string>
    <string name="hint_raceName">Race Name</string>
    <string name="hint_raceDescription">Race Description </string>
    <string name="hint_raceType">Race Type </string>
    <string name="hint_raceSize">Race Size </string>
    <string name="menu_addRace">Add</string>
    <string name="menu_cancelRace">Cancel</string>
    <string name="enter_race_title"> Please enter a Race Title </string>
    <string name="save_race"> Save Race </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_race_image">Select race image</string>
    <string name="change_race_image">Change race image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="menu_deleteRace">Delete</string>
    <string name="title_activity_race_maps">Map of All Races</string>
    <string name="button_signin">Sign In</string>
    <string name="button_signup">Sign Up</string>
    <string name="hint_email">Enter Email</string>
    <string name="hint_password">Enter Password</string>
    <string name="app_signin">Welcome to the Horse Racing App</string>
    <string name="button_signout">Logout</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>