<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ie.wit.horseRacingApp.activities.UserSignInUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/descriptionTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:maxLength="200"
                android:maxLines="5"
                android:padding="8dp"
                android:text="@string/app_signin"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:gravity="center"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:autofillHints=""
                android:hint="@string/hint_email"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:autofillHints=""
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/black"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/button_signin"
                android:textColor="#757575"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="-9dp"
                tools:layout_editor_absoluteY="276dp" />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/black"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/button_signup"
                android:textColor="#757575"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="-30dp"
                tools:layout_editor_absoluteY="353dp" />
        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>